--- a/homework1.html
+++ b/homework1.html
@@ -1,10 +1,11 @@
 <html>
-<heat>
-    <title>HTML/CSS Test Page for Web Designers</title>
-</heat>
-<body>
-    <h1>H1 = Heading 1</h1>
-        <p>This is a paragraph (< P >), IMHO, it makes sense to have vertical spacing between header elements and paragraphs.</p>
-        <p>This is also a paragraph.</p>
-</body>
+    <head>
+        <title>HTML/CSS Test Page for Web Designers</title>
+    </head>
+    <body>
+        <h1>H1 = Heading 1</h1>
+            <p>This is a paragraph (< P >), IMHO, it makes sense to have vertical spacing between header elements and paragraphs.</p>
+            <p>This is also a paragraph.</p>
+        <p>Line 1: This is a paragraph with four lines but:<br/>Line 2: It has self-terminating<br/>Line 3: line breaks (< br/ >) at<br/>Line 4: the end of every line.</p>
+    </body>
 </html>
