--- a/homework1.html
+++ b/homework1.html
@@ -4,8 +4,37 @@
     </head>
     <body>
         <h1>H1 = Heading 1</h1>
-            <p>This is a paragraph (< P >), IMHO, it makes sense to have vertical spacing between header elements and paragraphs.</p>
+            <p>This is a paragraph (< P >). IMHO, it makes sense to have vertical spacing between header elements and paragraphs.</p>
             <p>This is also a paragraph.</p>
-        <p>Line 1: This is a paragraph with four lines but:<br/>Line 2: It has self-terminating<br/>Line 3: line breaks (< br/ >) at<br/>Line 4: the end of every line.</p>
+            <p>Line 1: This is a paragraph with four lines but:<br/>Line 2: It has self-terminating<br/>Line 3: line breaks (< br/ >) at<br/>Line 4: the end of every line.</p>
+            <p>You might want to use the < br /> tag for multi-line list items like this:</p>
+
+        <h3>Related Posts:</h3>
+            <ul>
+                <li><a href="https://www.w3.org/TR/1999/REC-html401-19991224/">W3C Reccommendation 24 December 1999</a><alt> (NB: visited /clicked links (like this one) and unlisted/uncliked links should look different)<br/>HTML 4.01 Specification</alt></li>
+                <li><a href="https://www.w3schools.com/html/html_examples.asp">HTML Demo Page</a><alt> (NB: visited/clicked links and unlisted/uncliked links (like this one) should look different<br/> by Andrew Bedno</alt></li>
+                <li><a style="color:blue" href="https://www.labnol.org/internet/tools/best-online-tools-for-webmasters-know-everything-about-websites/2744/">Everything you know about website is right</a><alt>(9/1/2004)<br/>No it's not.Everything you know about website design is wrong.</alt></li>
+                <li><a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1300/J179v06n01_03">Designing Good Internet Experiences</a><alt>(1/2/1998)<br/>The Internet will remain out of the reach of many consumers until computers are as easy to use as lamps.</alt></li>
+            </ul>
+
+        <h2>H2 = Heading 2</h2>
+            <p>This is a paragraph.IMHO, it makes sense to have vertical spacing between header elements and paragraphs.</p>
+            <p>This is also a paragraph.</p>
+
+        <h3>H3 = Heading 3</h3>
+            <p>This is a paragraph.IMHO, it makes sense to have vertical spacing between header elements and paragraphs.</p>
+            <p>This is also a paragraph.</p>
+
+        <h4>H4 = Heading 4</h4>
+            <p>This is a paragraph.IMHO, it makes sense to have vertical spacing between header elements and paragraphs.</p>
+            <p>This is also a paragraph.</p>
+
+        <h5>H5 = Heading 5 (I don't think I've ever used this; i think that headings should be bigger than the corresponding text)</h5>
+            <p>This is a paragraph.IMHO, it makes sense to have vertical spacing between header elements and paragraphs.</p>
+            <p>This is also a paragraph.</p>
+        <h6>H6 = Heading 6 (I don't think I've ever used this; i think that headings should be bigger than the corresponding text)</h6>
+            <p>This is a paragraph.IMHO, it makes sense to have vertical spacing between header elements and paragraphs.</p>
+
     </body>
+    
 </html>
