--- a/homework3.html
+++ b/homework3.html
@@ -1,6 +1,6 @@
 <html>
     <head></head>
-    <body>
+    <body style="text-align: center;">
         <h1>Lists</h1>
         <h2>Movies I Like</h2>
             <ul>
@@ -42,6 +42,6 @@
                          <li>Bearded Dragon</li>
                          <li>Iguanas</li>
                      </ul>
-            </ul>
+            </ul>    
     </body>
 </html>
