--- a/homework1.html
+++ b/homework1.html
@@ -11,8 +11,8 @@
 
         <h3>Related Posts:</h3>
             <ul>
-                <li><a href="https://www.w3.org/TR/1999/REC-html401-19991224/">W3C Reccommendation 24 December 1999</a><alt> (NB: visited /clicked links (like this one) and unlisted/uncliked links should look different)<br/>HTML 4.01 Specification</alt></li>
-                <li><a href="https://www.w3schools.com/html/html_examples.asp">HTML Demo Page</a><alt> (NB: visited/clicked links and unlisted/uncliked links (like this one) should look different<br/> by Andrew Bedno</alt></li>
+                <li><a style="color:purple" href="https://www.w3.org/TR/1999/REC-html401-19991224/">W3C Reccommendation 24 December 1999</a><alt> (NB: visited /clicked links (like this one) and unlisted/uncliked links should look different)<br/>HTML 4.01 Specification</alt></li>
+                <li><a style="color:purple" href="https://www.w3schools.com/html/html_examples.asp">HTML Demo Page</a><alt> (NB: visited/clicked links and unlisted/uncliked links (like this one) should look different<br/> by Andrew Bedno</alt></li>
                 <li><a style="color:blue" href="https://www.labnol.org/internet/tools/best-online-tools-for-webmasters-know-everything-about-websites/2744/">Everything you know about website is right</a><alt>(9/1/2004)<br/>No it's not.Everything you know about website design is wrong.</alt></li>
                 <li><a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1300/J179v06n01_03">Designing Good Internet Experiences</a><alt>(1/2/1998)<br/>The Internet will remain out of the reach of many consumers until computers are as easy to use as lamps.</alt></li>
             </ul>
