--- a/homework3.html
+++ b/homework3.html
@@ -1,6 +1,6 @@
 <html>
     <head></head>
-    <body style="text-align: center;">
+    <body>
         <h1>Lists</h1>
         <h2>Movies I Like</h2>
             <ul>
