--- a/homework2.html
+++ b/homework2.html
@@ -4,12 +4,12 @@
     <body>
         <p>Preceding Text</p>
             <ol type="I">
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;List item 1</li>
+                <li>List item 1</li>
                     <ol type="a">
                         <li>Nested item 1.1</li>
                         <li>Nested item 1.2</li>
                     </ol>
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;List item 2</li>
+                <li>List item 2</li>
                     <ol>
                         <li>Nested item 2.1</li>
                         <li>Nested item 2.2</li>
@@ -23,12 +23,12 @@
                                 <li>Nested item 2.2.3</li>
                             </ul>
                     </ol>
-                <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;List item 3</li>
-                    <ol type="circle">
+                <li>List item 3</li>
+                    <ul type="disc">
                         <li>Nested item 3.1</li>
                         <li>Nested item 3.1</li>
                         <li>Nested item 3.1</li>
-                    </ol>
+                    </ul>
             </ol>
             
 
